--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <div class="content" role="main">
-  <a [routerLink]="['/login']">Test</a>
+  <nav>
+    <app-tetiere></app-tetiere>
+  </nav>
   <router-outlet></router-outlet>
 </div>
