--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="content" role="main">
-  <nav>
-    <app-tetiere></app-tetiere>
-  </nav>
-  <router-outlet></router-outlet>
+  <app-tetiere></app-tetiere>
+  <div class="spaced">
+    <router-outlet></router-outlet>
+  </div>
 </div>
